# LaDoN

./: .gitignore  README.md
LaDoN/: environment.yml  pyproject.toml  requirements.txt  setup.py
LaDoN/ladon/: MyHtmlPlot.html  agent.py  analyze_optimization.py  config.py  evaluate.py  genesis.py  helpers.py  load_files.py  load_files_final_state.py  load_files_opinions.py  load_files_over_time.py  network.py  optimize.py  optimize_barabasi.py  optimize_no_opinion.py  optimize_theoretical.py  simulator.py  visualize.py  write_evaluation.py  write_files.py
LaDoN/ladon/analysis/: ESS_analysis.py  facebook_analysis.py  netscience_analysis.py
LaDoN/ladon/analysis/data/ESS1-9e01_1/: codebook.html
LaDoN/ladon/classes/: agent.py  network.py
LaDoN/ladon/evaluate/: evaluate.py
LaDoN/ladon/helpers/: helpers.py  optimize_helpers.py
LaDoN/ladon/load/: final_state.py  opinions.py  over_time.py
LaDoN/ladon/optimize/: optimize.py  optimize_barabasi.py  optimize_no_opinion.py  optimize_theoretical.py
LaDoN/ladon/report/: References.bib  __latexindent_temp.tex  report.aux  report.bbl  report.blg  report.fdb_latexmk  report.fls  report.synctex(busy)  report.tex  report.toc  sn-article.aux  sn-article.blg  sn-article.fdb_latexmk  sn-article.fls  sn-article.synctex  sn-article.tex
LaDoN/ladon/report/with_template/: __latexindent_temp.tex  report.aux  report.fdb_latexmk  report.fls  report.out  report.tex
LaDoN/ladon/simulator/: simulator.py
LaDoN/ladon/write/: write_evaluation.py  write_files.py
LaDoN/tests/: test_ladon.py
