[tool.poetry]
name = "LaDoN"
version = "0.1.0"
description = ""
authors = ["gotticketsto360tour <werling1407@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
networkx = "^2.6.3"
numpy = "^1.21.5"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
jupyter = "^1.0.0"
black = "^21.12b0"
bokeh = "^2.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
